<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:parentTag="LinearLayout">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/pad_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:textSize="40sp" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/pad_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/n7"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/pad_8"
            app:layout_constraintTop_toTopOf="@+id/pad_8" />

        <Button
            android:id="@+id/pad_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/n8"
            app:layout_constraintBottom_toTopOf="@+id/pad_5"
            app:layout_constraintLeft_toRightOf="@+id/pad_7"
            app:layout_constraintRight_toLeftOf="@+id/pad_9"
            app:layout_constraintTop_toBottomOf="parent" />

        <Button
            android:id="@+id/pad_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/n9"
            app:layout_constraintLeft_toRightOf="@+id/pad_8"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pad_8" />

        <Button
            android:id="@+id/pad_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/n4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/pad_5"
            app:layout_constraintTop_toTopOf="@+id/pad_5" />

        <Button
            android:id="@+id/pad_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/n5"
            app:layout_constraintBottom_toTopOf="@+id/pad_2"
            app:layout_constraintLeft_toRightOf="@+id/pad_4"
            app:layout_constraintRight_toLeftOf="@+id/pad_6"
            app:layout_constraintTop_toBottomOf="@+id/pad_8" />

        <Button
            android:id="@+id/pad_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/n6"
            app:layout_constraintLeft_toRightOf="@+id/pad_5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pad_5" />

        <Button
            android:id="@+id/pad_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/n1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/pad_2"
            app:layout_constraintTop_toTopOf="@+id/pad_2" />

        <Button
            android:id="@+id/pad_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/n2"
            app:layout_constraintBottom_toTopOf="@+id/pad_0"
            app:layout_constraintLeft_toRightOf="@+id/pad_1"
            app:layout_constraintRight_toLeftOf="@+id/pad_3"
            app:layout_constraintTop_toBottomOf="@+id/pad_5" />

        <Button
            android:id="@+id/pad_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/n3"
            app:layout_constraintLeft_toRightOf="@+id/pad_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pad_2" />

        <Button
            android:id="@+id/pad_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/clear"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/pad_0"
            app:layout_constraintTop_toTopOf="@+id/pad_0" />

        <Button
            android:id="@+id/pad_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/n0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/pad_clear"
            app:layout_constraintRight_toLeftOf="@+id/pad_ok"
            app:layout_constraintTop_toBottomOf="@+id/pad_2"
            app:layout_constraintVertical_bias="0.5" />

        <Button
            android:id="@+id/pad_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/ok"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toRightOf="@+id/pad_0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pad_0" />
    </android.support.constraint.ConstraintLayout>

</merge>
