<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       tools:parentTag="LinearLayout">

    <TextView
        android:id="@+id/pad_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:gravity="center"
        android:text="@string/choose_code"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/pad_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:textSize="40sp"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/pad_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:text="@string/n7"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/pad_8"
            app:layout_constraintTop_toTopOf="@+id/pad_8"/>

        <Button
            android:id="@+id/pad_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:text="@string/n8"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/pad_5"
            app:layout_constraintLeft_toRightOf="@+id/pad_7"
            app:layout_constraintRight_toLeftOf="@+id/pad_9"
            app:layout_constraintTop_toBottomOf="parent"/>

        <Button
            android:id="@+id/pad_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:text="@string/n9"
            android:textSize="30sp"
            app:layout_constraintLeft_toRightOf="@+id/pad_8"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pad_8"/>

        <Button
            android:id="@+id/pad_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:text="@string/n4"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/pad_5"
            app:layout_constraintTop_toTopOf="@+id/pad_5"/>

        <Button
            android:id="@+id/pad_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:text="@string/n5"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/pad_2"
            app:layout_constraintLeft_toRightOf="@+id/pad_4"
            app:layout_constraintRight_toLeftOf="@+id/pad_6"
            app:layout_constraintTop_toBottomOf="@+id/pad_8"/>

        <Button
            android:id="@+id/pad_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:text="@string/n6"
            android:textSize="30sp"
            app:layout_constraintLeft_toRightOf="@+id/pad_5"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pad_5"/>

        <Button
            android:id="@+id/pad_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:text="@string/n1"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/pad_2"
            app:layout_constraintTop_toTopOf="@+id/pad_2"/>

        <Button
            android:id="@+id/pad_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:text="@string/n2"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/pad_0"
            app:layout_constraintLeft_toRightOf="@+id/pad_1"
            app:layout_constraintRight_toLeftOf="@+id/pad_3"
            app:layout_constraintTop_toBottomOf="@+id/pad_5"/>

        <Button
            android:id="@+id/pad_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:text="@string/n3"
            android:textSize="30sp"
            app:layout_constraintLeft_toRightOf="@+id/pad_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pad_2"/>

        <ImageButton
            android:id="@+id/pad_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/clear_desc"
            android:padding="16dp"
            android:src="@drawable/ic_backspace"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/pad_0"
            app:layout_constraintTop_toTopOf="@+id/pad_0"/>

        <Button
            android:id="@+id/pad_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:text="@string/n0"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/pad_clear"
            app:layout_constraintRight_toLeftOf="@+id/pad_ok"
            app:layout_constraintTop_toBottomOf="@+id/pad_2"/>

        <ImageButton
            android:id="@+id/pad_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/ok_desc"
            android:padding="16dp"
            android:src="@drawable/ic_done"
            android:textSize="30sp"
            app:layout_constraintLeft_toRightOf="@+id/pad_0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pad_0"/>
    </android.support.constraint.ConstraintLayout>

</merge>
